Update: `guiom.clj` has the `(-main)`