@@ -22,26 +22,11 @@
 (defn uber [_]
   (println "Cleaning directories ... ")
   (clean nil)
-  ;; the source can be copied,
-  ;; but the compilation doesn't happens from these files eitherway
-  #_#_
-  (println "Copying code ... ")
-  (b/copy-dir {:src-dirs   ["."]
-               :target-dir class-dir
-               :include    "kxygk/imergination/**"})
-  (println "Copying data ... ")
-  (b/copy-dir {:src-dirs   ["."]
-               :target-dir class-dir
-               :include    "data/**"})
-  #_
-  (b/javac {:src-dirs  ["src-java"] ; point to your java folders
-            :class-dir class-dir
-            :basis     basis})
   (println "Compiling ...")
   (b/compile-clj {:basis      basis
                   :src-dirs   ["."]
                   :class-dir  class-dir
-                  :ns-compile '[kxygk.imergination.core]})
+                  :ns-compile '[kxygk.imergination.guiom]})
   (println "Printing Dependency Tree..")
   (let [result (clojure.java.shell/sh "clojure" "-Stree")]
     (if (zero? (:exit result))
@@ -51,7 +36,7 @@
   (b/uber {:class-dir class-dir
            :uber-file uber-file
            :basis     basis
-           :main      'kxygk.imergination.core})
+           :main      'kxygk.imergination.guiom})
   (b/copy-dir {:src-dirs ["jars"]
                :target-dir "jars/uber"
                :include "imergination-uber.jar"})
@@ -60,7 +45,6 @@
 (defn bundle [_]
   (println "Cleaning old bundle...")
   (b/delete {:path "bundle"})
-
   (println "Bundling with jpackage...")
   (let [{:keys [exit
                 #_outc
@@ -70,7 +54,10 @@
             "--dest" "bundle"
             "--name" "Imergination"
             "--main-jar" "imergination-uber.jar"
-            "--main-class" "kxygk.imergination.core"
+            "--main-class" "kxygk.imergination.guiom"
+            "--java-options" "-Dapp.dir=$APPDIR"
+            "--java-options" "--enable-native-access=ALL-UNNAMED"
+            ;;#_#_
             "--type" "app-image")]
     (if (zero? exit)
       (println "Success! Check the /bundle folder.")
